--- a/public/pageSale/Slide/docs_src/templates/partials/head.hbs
+++ b/public/pageSale/Slide/docs_src/templates/partials/head.hbs
@@ -12,11 +12,11 @@
 
 <!-- Stylesheets -->
 <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,300italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="{{assets}}/css/docs.theme.min.css">
+<link rel="stylesheet" href="{{secure_assets}}/css/docs.theme.min.css">
 
 <!-- Owl Stylesheets -->
-<link rel="stylesheet" href="{{assets}}/owlcarousel/assets/owl.carousel.min.css">
-<link rel="stylesheet" href="{{assets}}/owlcarousel/assets/owl.theme.default.min.css">
+<link rel="stylesheet" href="{{secure_assets}}/owlcarousel/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="{{secure_assets}}/owlcarousel/assets/owl.theme.default.min.css">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
