--- a/public/pageSale/slider/docs_src/templates/pages/demos/animate.hbs
+++ b/public/pageSale/slider/docs_src/templates/pages/demos/animate.hbs
@@ -141,7 +141,7 @@ Part of owl.carousel.css:
 
 {{/markdown }}
 
-<link rel="stylesheet" href="{{assets}}/css/animate.css">
+<link rel="stylesheet" href="{{secure_assets}}/css/animate.css">
 <script>
 jQuery(document).ready(function($) {
 
