--- a/public/pageSale/slider/docs_src/templates/partials/javascripts.hbs
+++ b/public/pageSale/slider/docs_src/templates/partials/javascripts.hbs
@@ -1,3 +1,3 @@
-<script src="{{assets}}/vendors/jquery.min.js"></script>
-<script src="{{assets}}/owlcarousel/owl.carousel.js"></script>
+<script src="{{secure_assets}}/vendors/jquery.min.js"></script>
+<script src="{{secure_assets}}/owlcarousel/owl.carousel.js"></script>
 
