--- a/public/pageSale/Slide/docs_src/templates/partials/vendors.hbs
+++ b/public/pageSale/Slide/docs_src/templates/partials/vendors.hbs
@@ -1,3 +1,3 @@
-<script src="{{secure_assets}}/vendors/highlight.js"></script>
-<script src="{{secure_assets}}/js/app.js"></script>
-{{!-- <script src="{{secure_assets}}/js/foundation.min.js"></script> --}}
+<script src="{{assets}}/vendors/highlight.js"></script>
+<script src="{{assets}}/js/app.js"></script>
+{{!-- <script src="{{assets}}/js/foundation.min.js"></script> --}}
